--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ h2 {
   font-size: 24px;
   font-weight: 600;
   line-height: 36px;
+  padding-bottom: 8px;
 }
 
 h3 {
@@ -73,7 +74,7 @@ h3 {
 
 p,
 li {
-  max-width: 650px;
+  max-width: 720px;
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
@@ -98,7 +99,7 @@ a {
 
 ul,
 ol {
-  max-width: 650px;
+  max-width: 720px;
 }
 ul span,
 ol span {
@@ -131,16 +132,16 @@ section {
   transform: rotate(180deg);
 }
 
-.mt-21 {
-  margin-top: 21px;
+.mt-24 {
+  margin-top: 24px;
 }
 
-.mb-21 {
-  margin-bottom: 21px;
+.mb-24 {
+  margin-bottom: 24px;
 }
 
-.mt-16 {
-  margin-top: 16px;
+.mt-18 {
+  margin-top: 18px;
 }
 
 .mt-40 {
@@ -252,17 +253,25 @@ main {
   font-size: 16px;
   line-height: 24px;
 }
+.sidenav .left-content .heightwidth {
+  max-height: 370px;
+  width: unset;
+  transition: 0.34 ease-in-out;
+}
 .sidenav .left-content svg {
-  transition: 0.3s ease-in-out;
+  transition: 0.4s ease-in-out;
 }
 .sidenav .left-content ul {
   display: grid;
-  margin-top: 16px;
   gap: 16px;
   border-radius: 12px;
   overflow: hidden;
+  max-height: 0;
   height: 100%;
   transition: 0.3s ease-in-out;
+}
+.sidenav .left-content ul li:first-child {
+  margin-top: 16px;
 }
 .sidenav .left-content ul li {
   list-style: none;
@@ -282,22 +291,22 @@ main {
   color: var(--green);
   font-weight: 600;
 }
-.sidenav .left-content:not(:last-child) {
+.sidenav .left-content {
   border-bottom: 1px solid var(--gry);
 }
 
 .all-sections {
   display: flex;
   flex-direction: column;
-  max-width: 54rem;
+  max-width: 720px;
   width: 100%;
-  margin-left: 402px;
+  margin-left: 428px;
 }
 
 .paras {
-  max-width: 650px;
+  max-width: 720px;
   display: grid;
-  gap: 21px;
+  gap: 24px;
 }
 
 .img-content img {
@@ -395,7 +404,7 @@ main {
   line-height: 24px;
 }
 .action-content .center-img {
-  max-width: 650px;
+  max-width: 720px;
 }
 .action-content .center-img img {
   max-width: 232px;
