--- a/style.scss
+++ b/style.scss
@@ -141,9 +141,6 @@ section {
 .mt-24 {
   margin-top: 24px;
 }
-.mb-24 {
-  margin-bottom: 24px;
-}
 
 .mt-18 {
   margin-top: 18px;
@@ -153,12 +150,33 @@ section {
   margin-top: 40px;
 }
 
+.mb-24 {
+  margin-bottom: 24px;
+}
+
+.mb-40 {
+  margin-bottom: 40px;
+}
+
 .ml-5 {
   margin-left: 21px;
 }
 
 .hidden {
   display: none !important;
+}
+
+.visible {
+  visibility: visible;
+  opacity: 100%;
+  transition: 0.3s linear;
+  max-height: 400px;
+}
+.invisible {
+  visibility: hidden !important;
+  opacity: 0% !important;
+  // transition: 0.3s linear;
+  height: 0;
 }
 
 /*---------------------------------------------------- 
@@ -520,162 +538,161 @@ main {
     max-width: 406px;
     width: 100%;
   }
+}
+// frame
+.feedback {
+  // margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  // frame
-  .feedback {
-    margin-top: 40px;
+  .frame {
+    max-width: 675px;
+    width: 100%;
+    min-height: 208px;
+    padding: 1.2rem;
+    border-radius: 16px;
     display: flex;
     justify-content: center;
     align-items: center;
-
-    .frame {
-      max-width: 675px;
-      width: 100%;
-      min-height: 208px;
-      padding: 1.2rem;
-      border-radius: 16px;
+    flex-direction: column;
+    background-color: #f6f7f8;
+    .heading {
       display: flex;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
-      background-color: #f6f7f8;
-      .heading {
+    }
+
+    .buttons {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 40px;
+
+      .btn {
+        margin-top: 10px;
+        font-size: 18px;
+        line-height: 24px;
+        font-weight: 700;
+        border-radius: 8px;
+        width: 95px;
+        height: 40px;
         display: flex;
         justify-content: center;
         align-items: center;
+        transition: 0.3s linear;
+        cursor: pointer;
       }
 
-      .buttons {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 40px;
-
-        .btn {
-          margin-top: 10px;
-          font-size: 18px;
-          line-height: 24px;
-          font-weight: 700;
-          border-radius: 8px;
-          width: 95px;
-          height: 40px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          transition: 0.3s linear;
-          cursor: pointer;
-        }
-
-        .btn:first-child {
-          border: 1px solid var(--green);
-          color: var(--green);
-        }
-
-        .btn:last-child {
-          border: 1px solid var(--header-color);
-          color: var(--header-color);
-        }
-
-        .btn:hover {
-          color: white;
-        }
-
-        .btn:first-child:hover {
-          background-color: var(--green);
-        }
-
-        .btn:last-child:hover {
-          background-color: var(--header-color);
-        }
+      .btn:first-child {
+        border: 1px solid var(--green);
+        color: var(--green);
       }
 
-      .info {
-        margin-top: 21px;
-        text-align: center;
-        max-width: 616px;
+      .btn:last-child {
+        border: 1px solid var(--header-color);
+        color: var(--header-color);
+      }
+
+      .btn:hover {
+        color: white;
+      }
+
+      .btn:first-child:hover {
+        background-color: var(--green);
+      }
+
+      .btn:last-child:hover {
+        background-color: var(--header-color);
+      }
+    }
+
+    .info {
+      margin-top: 21px;
+      text-align: center;
+      max-width: 616px;
+      font-size: 12px;
+      line-height: 19px;
+      font-weight: 400;
+      a {
+        font-weight: 700;
+        color: var(--green);
+      }
+    }
+
+    // inbox
+
+    .inbox {
+      margin-top: 21px;
+
+      h3 {
+        font-size: 18px;
+        list-style: 24px;
+        font-weight: 700;
+      }
+      textarea {
+        margin-top: 20px;
+        width: 401px;
+        height: 120px;
+        background-color: rgba(251, 251, 251, 1);
+        border-radius: 8px;
+        border: none;
+        outline-color: rgba(209, 209, 209, 1);
+        outline-style: solid;
+        outline-width: 1px;
+        padding: 14px;
+        resize: none;
+        font-family: "Inter", sans-serif;
+        transition: 0.3s ease-in-out;
+      }
+
+      textarea::placeholder {
+        color: rgba(149, 149, 149, 1);
+      }
+
+      textarea:focus {
+        // outline: none !important;
+        outline-color: var(--green);
+      }
+
+      .input-wrapper {
+        position: relative;
+      }
+
+      button {
+        border: none;
+        color: var(--green);
+        font-weight: 700;
         font-size: 12px;
-        line-height: 19px;
-        font-weight: 400;
-        a {
-          font-weight: 700;
-          color: var(--green);
-        }
+        line-height: 16px;
+        cursor: pointer;
+        position: absolute;
+        right: 14px;
+        bottom: 14px;
       }
+    }
 
-      // inbox
-
-      .inbox {
-        margin-top: 21px;
-
-        h3 {
-          font-size: 18px;
-          list-style: 24px;
-          font-weight: 700;
-        }
-        textarea {
-          margin-top: 20px;
-          width: 401px;
-          height: 120px;
-          background-color: rgba(251, 251, 251, 1);
-          border-radius: 8px;
-          border: none;
-          outline-color: rgba(209, 209, 209, 1);
-          outline-style: solid;
-          outline-width: 1px;
-          padding: 14px;
-          resize: none;
-          font-family: "Inter", sans-serif;
-          transition: 0.3s ease-in-out;
-        }
-
-        textarea::placeholder {
-          color: rgba(149, 149, 149, 1);
-        }
-
-        textarea:focus {
-          // outline: none !important;
-          outline-color: var(--green);
-        }
-
-        .input-wrapper {
-          position: relative;
-        }
-
-        button {
-          border: none;
-          color: var(--green);
-          font-weight: 700;
-          font-size: 12px;
-          line-height: 16px;
-          cursor: pointer;
-          position: absolute;
-          right: 14px;
-          bottom: 14px;
-        }
+    .assist {
+      max-width: 267px;
+      margin-top: 21px;
+      h3 {
+        font-size: 18px;
+        line-height: 24px;
+        font-weight: 700px;
+        color: var(--green);
+        text-align: center;
       }
+    }
 
-      .assist {
-        max-width: 267px;
-        margin-top: 21px;
-        h3 {
-          font-size: 18px;
-          line-height: 24px;
-          font-weight: 700px;
-          color: var(--green);
-          text-align: center;
-        }
-      }
-
-      .sent {
-        max-width: 267px;
-        margin-top: 21px;
-        h3 {
-          font-size: 18px;
-          line-height: 24px;
-          font-weight: 700px;
-          color: var(--header-color);
-          text-align: center;
-        }
+    .sent {
+      max-width: 267px;
+      margin-top: 21px;
+      h3 {
+        font-size: 18px;
+        line-height: 24px;
+        font-weight: 700px;
+        color: var(--header-color);
+        text-align: center;
       }
     }
   }
